[package]
name = "the-daily-geode"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
clap = { version = "4.5.21", features = ["derive"] }
clap_derive = "4.5.18"
anyhow = "1.0.93"
chrono = "0.4.38"
ordinal = "0.3.2"
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["blocking"] }